<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_blue"
    android:layout_marginBottom="5dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name1"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sit_num1"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/sit_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sit_num"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_sum1"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/total_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_sum"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</LinearLayout>