<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EducationalYears"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/first_year"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/first_year"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/dark_purple"/>
    <TextView
        android:id="@+id/second_year"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/second_year"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/purple"/>
    <TextView
        android:id="@+id/third_year"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/third_year"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/red"/>
    <TextView
        android:id="@+id/fourth_year"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/fourth_year"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/orange"/>

</LinearLayout>